Remove topic specific info and swap out for Bernie

--- a/app/templates/_story_card.html
+++ b/app/templates/_story_card.html
@@ -37,10 +37,10 @@
         </div>
     </div>
 {% endfor %}
-<a id="archive_link" href="http://digital.vpr.net/topic/health-care" alt="Click here for more health care reporting">
+<a id="archive_link" href="http://digital.vpr.net/term/bernie-sanders" alt="Click here for more Bernie Sanders reporting">
 <div class="row top_story" id="archive">
     <div class="col-xs-12">
-        <p><span>More {{ page_title }} Reporting</span></p>
+        <p><span>More VPR Reporting on Bernie Sanders</span></p>
     </div>
 </div>
 </a>
