--- a/app/templates/_resources.html
+++ b/app/templates/_resources.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-12 col-md-offset-0 col-sm-10 col-sm-offset-1">
         <div id="resources">
-            <h3>{{ page_title }} Resources</h3>
+            <h3>Resources</h3>
             <div class="row content_box">
                 <p><a href="https://www.google.com/#q={{ page_title }}">Useful Resources</a></p>
             </div>
