--- a/app/templates/content.html
+++ b/app/templates/content.html
@@ -13,6 +13,7 @@
             {% include "_story_card.html" %}
         </div>
         <div id="right_panel" class="col-md-5 col-lg-4">
+            {% include "_soundcloud.html" %}
             {% include "_explainer.html" %}
             {% include "_reporters.html" %}
             {% if featured %}
