--- a/app/templates/_social.html
+++ b/app/templates/_social.html
@@ -10,6 +10,6 @@
     <meta name="twitter:site" content="@vprnet">
     <meta name="twitter:title" content="{{ social.title }}">
     <meta name="twitter:description" content="{{ social.description }}">
-    <meta name="twitter:creator" content="@sarambsimon">
+    <meta name="twitter:creator" content="@vprnet">
     <meta name="twitter:image:src" content="{{ social.img }}">
     {% endif %}
