--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
     <title>{% block title %}Vermont Public Radio{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{% block description %}{{ social.description }}{% endblock %}">
-    <meta name="author" content="Sara Simon, VPR, @sarambsimon">
+    <meta name="author" content="@vprnet">
 
     <!-- Styles -->
 {% block style %}
