Add external Bernie resources

--- a/app/templates/_resources.html
+++ b/app/templates/_resources.html
@@ -1,9 +1,10 @@
 <div class="row">
     <div class="col-md-12 col-md-offset-0 col-sm-10 col-sm-offset-1">
         <div id="resources">
-            <h3>Resources</h3>
+            <h3>Other Bernie Resources</h3>
             <div class="row content_box">
-                <p><a href="https://www.google.com/#q={{ page_title }}">Useful Resources</a></p>
+                <p><a href="http://ballotpedia.org/Bernie_Sanders" target="_blank">Ballotpedia</a></p>
+                <p><a href="http://www.sevendaysvt.com/vermont/bernie-beat/Category?oid=2428243" target="_blank">Seven Days</a></p>
             </div>
         </div>
     </div>
