--- a/app/templates/_resources.html
+++ b/app/templates/_resources.html
@@ -3,6 +3,7 @@
         <div id="resources">
             <h3>Other Bernie Resources</h3>
             <div class="row content_box">
+                <p><a href="https://berniesanders.com/" target="_blank">Official Campaign Page</a></p>
                 <p><a href="http://ballotpedia.org/Bernie_Sanders" target="_blank">Ballotpedia</a></p>
                 <p><a href="http://www.sevendaysvt.com/vermont/bernie-beat/Category?oid=2428243" target="_blank">Seven Days</a></p>
             </div>
