--- a/app/templates/_featured.html
+++ b/app/templates/_featured.html
@@ -10,7 +10,7 @@
                     <p>{{ paragraph }}</p>
                 {% endfor %}
                 {% if feature.audio %}
-                    {{ macros.player(feature.audio.mp3, feature.audio.duration, "Listen To Report") }}
+                    {{ macros.player(feature.audio.mp3, feature.audio.duration, "Listen") }}
                 {% endif %}
             </div>
         </div>
