--- a/app/templates/content.html
+++ b/app/templates/content.html
@@ -15,7 +15,8 @@
         <div id="right_panel" class="col-md-5 col-lg-4">
             {% include "_explainer.html" %}
             {% include "_soundcloud.html" %}
-            {% include "_featured.html" %}
+            {% include "_featured1.html" %}
+            {% include "_featured2.html" %}
             {% include "_resources.html" %}
         </div>
     </div>
