--- a/app/templates/_announcement.html
+++ b/app/templates/_announcement.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-sm-10 col-sm-offset-1 col-md-offset-0 col-md-12">
         <div id="about_page">
-            <h3>{{ audio_explainer }}</h3>
+            <h3>{{ announcement_explainer }}</h3>
             <div class="content_box">
               <iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/203307038&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
             </div>
