--- a/app/templates/_audio_clips.html
+++ b/app/templates/_audio_clips.html
@@ -3,7 +3,7 @@
         <div id="about_page">
             <h3>{{ audio_clips_explainer }}</h3>
             <div class="content_box">
-              <iframe width="100%" height="300" scrolling="no" frameborder="no" src=""></iframe>
+              <iframe width="100%" height="550" scrolling="yes" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/109810210&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
             </div>
         </div>
     </div>
