--- a/app/templates/content.html
+++ b/app/templates/content.html
@@ -14,6 +14,7 @@
         </div>
         <div id="right_panel" class="col-md-5 col-lg-4">
             {% include "_explainer.html" %}
+            {% include "_audio_clips.html" %}
             {% include "_announcement.html" %}
             {% include "_featured1.html" %}
             {% include "_featured2.html" %}
