Add tile for NPR full coverage

--- a/app/templates/content.html
+++ b/app/templates/content.html
@@ -18,6 +18,7 @@
             {% include "_announcement.html" %}
             {% include "_featured1.html" %}
             {% include "_featured2.html" %}
+            {% include "_npr.html" %}
             {% include "_resources.html" %}
         </div>
     </div>
