Remove double link

--- a/app/templates/_npr.html
+++ b/app/templates/_npr.html
@@ -6,7 +6,7 @@
             <h3><a href="http://www.npr.org/sections/politics/" target="_blank" alt="NPR's Full Political Coverage">NPR's Full Political Coverage</a></h3>
             <div class="content_box"><a href="http://www.npr.org/sections/politics/" target="_blank" alt="NPR's Full Political Coverage">
                 <img class="img-responsive" src="{{ url_for('static', filename=feature.image) }}">
-                <p><a href="http://www.npr.org/sections/politics/" target="_blank" alt="NPR's Full Political Coverage">Keep up with NPR's full political coverage.</p>
+                <p>Keep up with NPR's full political coverage.</p>
             </div>
         </div>
     </div>
