Swap out NPR politics link for NPR presidential coverage link

--- a/app/templates/_npr.html
+++ b/app/templates/_npr.html
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-md-12 col-md-offset-0 col-sm-10 col-sm-offset-1">
         <div class="featured">
-            <h3><a href="http://www.npr.org/sections/politics/" target="_blank" alt="NPR's Full Political Coverage">NPR's Full Political Coverage</a></h3>
+            <h3><a href="http://www.npr.org/tags/166791593/2016-presidential-race" target="_blank" alt="NPR's Full Political Coverage">NPR's Full Political Coverage</a></h3>
             <div class="content_box"><a href="http://www.npr.org/sections/politics/" target="_blank" alt="NPR's Full Political Coverage">
                 <img class="img-responsive" src="{{ url_for('static', filename=feature.image) }}">
                 <p>Keep up with NPR's full political coverage.</p>
