--- a/app/templates/_npr.html
+++ b/app/templates/_npr.html
@@ -1,14 +1,10 @@
-{% import "_macros.html" as macros %}
-{% for feature in npr %}
 <div class="row">
     <div class="col-md-12 col-md-offset-0 col-sm-10 col-sm-offset-1">
-        <div class="featured">
+        <div id="resources">
             <div class="content_box"><a href="http://www.npr.org/tags/166791593/2016-presidential-race" target="_blank" alt="NPR's Full 2016 Presidential Campaign Coverage">
                 <h3>NPR's Full 2016 Presidential Campaign Coverage</h3>
-                <img class="img-responsive" src="{{ url_for('static', filename=feature.image) }}">
-                <p>Keep up with NPR's full 2016 presidential campaign coverage.</p></a>
+                <img src="http://www.vpr.net/sandbox/bernie/static/img/candidates.jpg" width="326" height="244"></a>
             </div>
         </div>
     </div>
 </div>
-{% endfor %}
