Add photo credits

--- a/app/templates/_npr.html
+++ b/app/templates/_npr.html
@@ -4,6 +4,7 @@
             <div class="content_box"><a href="http://www.npr.org/tags/166791593/2016-presidential-race" target="_blank" alt="NPR's Full 2016 Presidential Campaign Coverage">
                 <h3>NPR's Full 2016 Presidential Campaign Coverage</h3>
                 <img src="http://www.vpr.net/sandbox/bernie/static/img/candidates.jpg" width="326" height="244"></a>
+                <p>AP Photo/Charlie Neibergall/Nati Harnik/Carloyn Kaster</p>
             </div>
         </div>
     </div>
