--- a/app/templates/_resources.html
+++ b/app/templates/_resources.html
@@ -1,12 +1,12 @@
 <div class="row">
     <div class="col-md-12 col-md-offset-0 col-sm-10 col-sm-offset-1">
-        <div id="resources">
+        <div class="featured">
+          <div class="content_box">
             <h3>Other Bernie Resources</h3>
-            <div class="row content_box">
-                <p><a href="https://berniesanders.com/" target="_blank">Official Campaign Page</a></p>
-                <p><a href="http://ballotpedia.org/Bernie_Sanders" target="_blank">Ballotpedia</a></p>
-                <p><a href="http://www.sevendaysvt.com/vermont/bernie-beat/Category?oid=2428243" target="_blank">Seven Days</a></p>
-            </div>
+              <p><a href="https://berniesanders.com/" target="_blank">Official Campaign Page</a></p>
+              <p><a href="http://ballotpedia.org/Bernie_Sanders" target="_blank">Ballotpedia</a></p>
+              <p><a href="http://www.sevendaysvt.com/vermont/bernie-beat/Category?oid=2428243" target="_blank">Seven Days</a></p>
+          </div>
         </div>
     </div>
 </div>
