--- a/app/templates/_npr.html
+++ b/app/templates/_npr.html
@@ -6,7 +6,7 @@
             <h3><a href="http://www.npr.org/tags/166791593/2016-presidential-race" target="_blank" alt="NPR's Full 2016 Presidential Campaign Coverage">NPR's Full 2016 Presidential Campaign Coverage</h3>
             <div class="content_box">
                 <img class="img-responsive" src="http://mediad.publicbroadcasting.net/p/vpr/files/201506/presidential-candidates-ap-neibergall-harnik-kaster-crop.jpg"></a>
-                <p>AP Photo/Charlie Neibergall/Nati Harnik/Carloyn Kaster</p>
+                <h6>AP Photo/Charlie Neibergall/Nati Harnik/Carloyn Kaster</h6>
             </div>
         </div>
     </div>
