Add teaser link to documentary preview

--- a/app/templates/_documentary.html
+++ b/app/templates/_documentary.html
@@ -1,10 +1,10 @@
 <div class="row">
     <div class="col-sm-10 col-sm-offset-1 col-md-offset-0 col-md-12">
         <div id="about_page">
-            <h3>{{ documentary_explainer }}</h3>
+            <h3><a href="http://projects.vpr.net/becoming-bernie" target="_blank" alt="VPR's Becoming Bernie">Coming October 6, 2015</h3>
             <div class="content_box">
               <img class="img-responsive" src="http://mediad.publicbroadcasting.net/p/vpr/files/201509/vpr-news-becoming-bernie-20150928.jpg"></a><br>
-              <p> VPR News presents <i>Becoming Bernie</i> next Tuesday, October 6 at noon and 7 p.m. From his surprise victory as mayor of Burlington, to a seat in Congress, to his candidacy for president, the program will look at the rise and the record of Vermont presidential candidate Bernie Sanders. </p>
+              <p>VPR News presents <i><a href="http://projects.vpr.net/becoming-bernie" target="_blank">Becoming Bernie</a></i> next Tuesday, October 6 at noon and 7 p.m. From his surprise victory as mayor of Burlington, to a seat in Congress, to his candidacy for president, the program will look at the rise and the record of Vermont presidential candidate Bernie Sanders.</p>
             </div>
         </div>
     </div>
