Fix audio preloading bug

--- a/app/templates/_macros.html
+++ b/app/templates/_macros.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="audio_player">
-            <a class="audio_play"><audio src="{{ file }}" preload="auto" type="audio/mpeg"></audio>
+            <a class="audio_play"><audio data-src="{{ file }}" preload="auto" type="audio/mpeg"></audio>
                 <div class="play_btn">
                     <span class="glyphicon glyphicon-play"></span>
                 </div></a><div class="progress_bar" data="{{ duration }}" remaining="{{ duration }}"></div>
